--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,9 @@
     "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc",
     "test": "jest"
   },
-  "jest":{
+  "jest": {
     "testEnvironment": "jsdom"
-  }, 
+  },
   "author": "Eddy Nguyen",
   "license": "ISC",
   "devDependencies": {
@@ -52,6 +52,8 @@
     "webpack-dev-server": "^4.5.0"
   },
   "dependencies": {
+    "axios": "^0.24.0",
+    "dotenv": "^10.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   }
