--- a/frontend/package.json
+++ b/frontend/package.json
@@ -55,6 +55,8 @@
   "dependencies": {
     "axios": "^0.24.0",
     "dotenv": "^10.0.0",
+    "dotenv-webpack": "^7.0.3",
+    "node-polyfill-webpack-plugin": "^1.1.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router": "^6.0.2",
