--- a/frontend/package.json
+++ b/frontend/package.json
@@ -54,6 +54,7 @@
   },
   "dependencies": {
     "axios": "^0.24.0",
+    "classnames": "^2.3.1",
     "dotenv": "^10.0.0",
     "dotenv-webpack": "^7.0.3",
     "node-polyfill-webpack-plugin": "^1.1.4",
