--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,6 +44,7 @@
     "postcss-cli": "^9.0.2",
     "postcss-loader": "^6.2.0",
     "prettier": "^2.4.1",
+    "regenerator-runtime": "^0.13.9",
     "style-loader": "^3.3.1",
     "tailwindcss": "^2.2.19",
     "ts-loader": "^9.2.6",
