--- a/frontend/package.json
+++ b/frontend/package.json
@@ -55,12 +55,14 @@
     "webpack-dev-server": "^4.5.0"
   },
   "dependencies": {
+    "@types/react-beautiful-dnd": "^13.1.2",
     "axios": "^0.24.0",
     "classnames": "^2.3.1",
     "dotenv": "^10.0.0",
     "dotenv-webpack": "^7.0.3",
     "node-polyfill-webpack-plugin": "^1.1.4",
     "react": "^17.0.2",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-router": "^6.0.2",
