--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,72 +1,79 @@
 {
-  "name": "frontend",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "webpack serve --port 3000",
-    "build": "NODE_ENV=production webpack",
-    "lint": "eslint .",
-    "lint:fix": "eslint --fix",
-    "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc",
-    "test": "jest"
-  },
-  "jest": {
-    "testEnvironment": "jsdom"
-  },
-  "author": "Eddy Nguyen",
-  "license": "ISC",
-  "devDependencies": {
-    "@babel/cli": "^7.16.0",
-    "@babel/core": "^7.16.0",
-    "@babel/preset-env": "^7.16.4",
-    "@babel/preset-react": "^7.16.0",
-    "@babel/preset-typescript": "^7.16.0",
-    "@testing-library/jest-dom": "^5.15.0",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.0.3",
-    "@types/react": "^17.0.36",
-    "@types/react-dom": "^17.0.11",
-    "@types/react-router": "^3.0.27",
-    "@types/react-router-dom": "^5.3.2",
-    "@typescript-eslint/eslint-plugin": "^5.4.0",
-    "@typescript-eslint/parser": "^5.4.0",
-    "autoprefixer": "^10.4.0",
-    "babel-loader": "^8.2.3",
-    "css-loader": "^6.5.1",
-    "eslint": "^8.3.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.27.1",
-    "html-webpack-plugin": "^5.5.0",
-    "jest": "^27.3.1",
-    "mini-css-extract-plugin": "^2.4.5",
-    "postcss": "^8.3.11",
-    "postcss-cli": "^9.0.2",
-    "postcss-loader": "^6.2.0",
-    "prettier": "^2.4.1",
-    "regenerator-runtime": "^0.13.9",
-    "style-loader": "^3.3.1",
-    "tailwindcss": "^2.2.19",
-    "ts-loader": "^9.2.6",
-    "typescript": "^4.5.2",
-    "webpack": "^5.64.2",
-    "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.5.0"
-  },
-  "dependencies": {
-    "@types/react-beautiful-dnd": "^13.1.2",
-    "axios": "^0.24.0",
-    "classnames": "^2.3.1",
-    "dotenv": "^10.0.0",
-    "dotenv-webpack": "^7.0.3",
-    "node-polyfill-webpack-plugin": "^1.1.4",
-    "react": "^17.0.2",
-    "react-beautiful-dnd": "^13.1.0",
-    "react-dom": "^17.0.2",
-    "react-icons": "^4.3.1",
-    "react-router": "^6.0.2",
-    "react-router-dom": "^6.0.2"
-  }
+    "name": "frontend",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "start": "webpack serve --port 3000",
+        "build": "NODE_ENV=production webpack",
+        "lint": "eslint .",
+        "lint:fix": "eslint --fix",
+        "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc",
+        "test": "jest",
+        "wdio": "wdio run wdio.conf.js"
+    },
+    "jest": {
+        "testEnvironment": "jsdom"
+    },
+    "author": "Eddy Nguyen",
+    "license": "ISC",
+    "devDependencies": {
+        "@babel/cli": "^7.16.0",
+        "@babel/core": "^7.16.0",
+        "@babel/preset-env": "^7.16.4",
+        "@babel/preset-react": "^7.16.0",
+        "@babel/preset-typescript": "^7.16.0",
+        "@testing-library/jest-dom": "^5.15.0",
+        "@testing-library/react": "^12.1.2",
+        "@testing-library/user-event": "^13.5.0",
+        "@types/jest": "^27.0.3",
+        "@types/react": "^17.0.36",
+        "@types/react-dom": "^17.0.11",
+        "@types/react-router": "^3.0.27",
+        "@types/react-router-dom": "^5.3.2",
+        "@typescript-eslint/eslint-plugin": "^5.4.0",
+        "@typescript-eslint/parser": "^5.4.0",
+        "@wdio/cli": "^7.16.9",
+        "@wdio/local-runner": "^7.16.9",
+        "@wdio/mocha-framework": "^7.16.6",
+        "@wdio/spec-reporter": "^7.16.9",
+        "autoprefixer": "^10.4.0",
+        "babel-loader": "^8.2.3",
+        "chromedriver": "^96.0.0",
+        "css-loader": "^6.5.1",
+        "eslint": "^8.3.0",
+        "eslint-config-prettier": "^8.3.0",
+        "eslint-plugin-prettier": "^4.0.0",
+        "eslint-plugin-react": "^7.27.1",
+        "html-webpack-plugin": "^5.5.0",
+        "jest": "^27.3.1",
+        "mini-css-extract-plugin": "^2.4.5",
+        "postcss": "^8.3.11",
+        "postcss-cli": "^9.0.2",
+        "postcss-loader": "^6.2.0",
+        "prettier": "^2.4.1",
+        "regenerator-runtime": "^0.13.9",
+        "style-loader": "^3.3.1",
+        "tailwindcss": "^2.2.19",
+        "ts-loader": "^9.2.6",
+        "typescript": "^4.5.2",
+        "wdio-chromedriver-service": "^7.2.2",
+        "webpack": "^5.64.2",
+        "webpack-cli": "^4.9.1",
+        "webpack-dev-server": "^4.5.0"
+    },
+    "dependencies": {
+        "@types/react-beautiful-dnd": "^13.1.2",
+        "axios": "^0.24.0",
+        "classnames": "^2.3.1",
+        "dotenv": "^10.0.0",
+        "dotenv-webpack": "^7.0.3",
+        "node-polyfill-webpack-plugin": "^1.1.4",
+        "react": "^17.0.2",
+        "react-beautiful-dnd": "^13.1.0",
+        "react-dom": "^17.0.2",
+        "react-icons": "^4.3.1",
+        "react-router": "^6.0.2",
+        "react-router-dom": "^6.0.2"
+    }
 }
