--- a/frontend/package.json
+++ b/frontend/package.json
@@ -65,10 +65,12 @@
     "dependencies": {
         "@types/react-beautiful-dnd": "^13.1.2",
         "axios": "^0.24.0",
+        "axios-mock-adapter": "^1.20.0",
         "classnames": "^2.3.1",
         "dotenv": "^10.0.0",
         "dotenv-webpack": "^7.0.3",
         "html-dnd": "^1.2.1",
+        "moment": "^2.29.1",
         "node-polyfill-webpack-plugin": "^1.1.4",
         "react": "^17.0.2",
         "react-beautiful-dnd": "^13.1.0",
